--- a/Index.html
+++ b/Index.html
@@ -21,8 +21,8 @@
       width: 100vw;
       height: 100vh;
       /* Set the background image */
-      background-image: url("https://cdn.leonardo.ai/users/d510c6e8-4d4e-4c83-b444-2fbfeb0afa75/generations/8c8f125d-9ebe-458d-add3-bc9e38c8f5c4/Default_add_depth_3.jpg");
-      background-size: 90%; /* Make the background image slightly smaller */
+      background-image: url("https://i.ibb.co/PWpB6Z2/Default-A-sleek-and-sophisticated-landing-page-exuding-a-sense-2.jpg");
+      background-size: cover; /* Make the background image responsive */
       background-position: center;
       /* Add animation for the background */
       animation: background-flicker 10s infinite linear;
